applied some lint fixes